Ticket DT-1049: fix horizontal scroll bar

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -821,7 +821,7 @@ ul.twitter {
 
 .widget.profile .bk-profile-socialicons a {
     text-decoration: none;
-    text-indent: 9999px;
+    text-indent: -9999px;
     white-space: nowrap;
 }
 
